# computer-says-know

./: README.md  presentation-notes.md
asr-app/: Cargo.toml
asr-app/data/asr-out/: CH02CH01FNORMF1_F1_asr_norm.json  CH02CH01FNORMF1_F1_asr_norm_wer.json  CH03CH04FNORMS2_S2_asr_norm_wer.json  CH04CH03FNORMS1_S1_asr_norm.json  CH11CH12MNORMB3_B3_asr_norm_wer.json  CH12CH11MNORMS3_S3_asr_norm_wer.json  CH17CH16MNORMB2_B2_asr_norm.json  CH17CH16MNORMB2_B2_asr_norm_wer.json  CH21CH20FNORMS1_S1_asr_norm_wer.json  CH23CH22MNORMS3_S3_asr_norm.json  CH23CH22MNORMS3_S3_asr_norm_wer.json  CH25CH24FNORMF1_F1_asr_norm.json  CH27CH26FNORMF3_F3_asr_norm.json  CH29CH28FNORMF3_F3_asr_norm_wer.json  CH31CH30MNORMB2_B2_asr_norm.json  CH33CH32FNORMS1_S1_asr_norm_wer.json  MA03MA04FNORMS2_S2_asr_norm.json  MA05MA06MNORMB3_B3_asr_norm_wer.json  MA06MA05MNORMS3_S3_asr_norm.json  MA19MA20MNORMS2_S2_asr_norm_wer.json  MA20MA19MNORMS3_S3_asr_norm.json  MA22MA21MNORMF3_F3_asr_norm_wer.json  MA23MA24FNORMF3_F3_asr_norm_wer.json
asr-app/data/confidence-data/: CH01CH02FNORMF2_F2_asr_norm.json  CH02CH01FNORMF1_F1_asr_norm.json  CH02CH01FNORMF1_F1_asr_norm_wer.json  CH03CH04FNORMS2_S2_asr_norm.json  CH04CH03FNORMS1_S1_asr_norm.json  CH04CH03FNORMS1_S1_asr_norm_wer.json  CH05CH06MNORMS3_S3_asr_norm.json  CH05CH06MNORMS3_S3_asr_norm_wer.json  CH06CH05MNORMF3_F3_asr_norm_wer.json  CH07CH08FNORMB3_B3_asr_norm.json  CH08CH07FNORMB1_B1_asr_norm.json  CH08CH07FNORMB1_B1_asr_norm_wer.json  (+54 more)
asr-app/src/: asr_app.py  audio_data_link.py  data_reader.rs  main.rs  pysoundtest.py
dataSpell/: test.R  test.py
(+1946 files in other folders)
