[package]
name = "asr-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
cursive = "0.20.0"
json = "*"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
